# AI_Search_Image_Engine

./: .gitignore  README.md  main.py  pyproject.toml  run.py
Server/: main.py
Server/static/: style.css
Server/templates/: Search.html  Update.html  index.html
app_embedding/: core.py
