[project]
name = "ai-engine-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "matplotlib>=3.10.8",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "torch>=2.10.0",
    "uuid>=1.30",
]
